--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="content container">
       <div class="sidebar">
         <aside>
-          <h3 class="widget-title"><span>Categories</span></h3>
+          <h3 class="widget-title"><span>КАТЕГОРИЯ </span></h3>
           <ul class="product-categories">
             <li class="cat-item cat-item-44">
               <a
@@ -56,7 +56,7 @@
               <span class="count">(8)</span>
             </li>
             <li class="cat-item cat-item-42">
-              <a href="">Footwear</a> <span class="count">(6)</span>
+              <a href="">Кросовки</a> <span class="count">(6)</span>
             </li>
             <li class="cat-item cat-item-48">
               <a href="">Handbags</a> <span class="count">(4)</span>
