--- a/product.html
+++ b/product.html
@@ -53,7 +53,7 @@
           <div class="title-brend">Adidas</div>
         </div>
         <p class="price">56 <span>UAH</span></p>
-        <p>
+        <p class="description_product">
           Engineered with pro-level features and performance, the
           12.3-effective-megapixel D300 combines brand new technologies with
           advanced features inherited from Nikon's newly announced D3
