--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@
     </header>
     <main class="container product-container">
       <div class="image-container">
-        <img src="./assets/img/15.jpg" alt="">
+        <img src="./assets/img/15.jpg" alt="" />
       </div>
       <div class="product-info">
         <h2>SPORT SNEAKERS DE RUNNING</h2>
@@ -59,6 +59,7 @@
           advanced features inherited from Nikon's newly announced D3
           professional digital SLR camera to offer serious photographers...
         </p>
+        <h3>Размер</h3>
         <div class="size-container">
           <a href="">4</a>
           <a href="">5</a>
@@ -76,25 +77,17 @@
           <a href="">7</a>
           <a href="">8</a>
         </div>
-        <div class="color">
-          <a href="">4</a>
-          <a href="">5</a>
-          <a href="">6</a>
-          <a href="">7</a>
-          <a href="">8</a>
-          <a href="">4</a>
-          <a href="">5</a>
-          <a href="">6</a>
-          <a href="">7</a>
-          <a href="">8</a>
-          <a href="">4</a>
-          <a href="">5</a>
-          <a href="">6</a>
-          <a href="">7</a>
-          <a href="">8</a>
+        <h3>Цвет</h3>
+        <div class="color-container">
+          <div style="background-color: red" class="color"></div>
+          <div style="background-color: red" class="color"></div>
+          <div style="background-color: red" class="color"></div>
+          <div style="background-color: red" class="color"></div>
+          <div style="background-color: red" class="color"></div>
         </div>
+        <h3>Количество</h3>
         <div class="button-product">
-          <input type="text">
+          <input type="text" />
           <button>Add to cart</button>
         </div>
       </div>
